Se cambió a SQL Server y se incluyen Roles

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Server=(local);Database=DesignPatterns_IdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
