--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local);Database=DesignPatterns_IdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true;"
-  }
+  },
+  "Urls": "http://localhost:50000;https://localhost:50001"
 }
